apply plugin: 'com.android.application'

android {
    compileSdkVersion 32
    defaultConfig {
        applicationId "org.mian.gitnex"
        minSdkVersion 23
        targetSdkVersion 32
        versionCode 445
        versionName "4.5.0-dev"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    flavorDimensions "default"
    productFlavors {
        free {
            applicationId "org.mian.gitnex"
        }
        pro {
            applicationId "org.mian.gitnex.pro"
        }
    }
    buildFeatures {
        viewBinding true
    }
    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        coreLibraryDesugaringEnabled true

        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    lint {
        abortOnError false
    }
    defaultConfig {
        vectorDrawables.useSupportLibrary = true
    }
}

configurations {
    cleanedAnnotations
    compile.exclude group: 'org.jetbrains', module: 'annotations'
}

dependencies {
    def lifecycle_version = '2.5.1'
    def markwon_version = '4.6.2'
    def work_version = "2.7.1"
    def acra = '5.8.4'

    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.compose.material3:material3:1.0.0-alpha15'
    implementation 'androidx.compose.material3:material3-window-size-class:1.0.0-alpha15'
    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
    implementation "com.google.code.gson:gson:2.9.0"
    implementation "com.squareup.picasso:picasso:2.71828"
    implementation 'jp.wasabeef:picasso-transformations:2.4.0'
    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
    implementation 'com.github.ramseth001:TextDrawable:1.1.3'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
    implementation 'org.ocpsoft.prettytime:prettytime:5.0.2.Final'
    implementation 'com.github.Pes8:android-material-color-picker-dialog:master'
    implementation "io.noties.markwon:core:$markwon_version"
    implementation "io.noties.markwon:ext-latex:$markwon_version"
    implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
    implementation "io.noties.markwon:ext-tables:$markwon_version"
    implementation "io.noties.markwon:ext-tasklist:$markwon_version"
    implementation "io.noties.markwon:html:$markwon_version"
    implementation "io.noties.markwon:image:$markwon_version"
    implementation "io.noties.markwon:image-picasso:$markwon_version"
    implementation "io.noties.markwon:linkify:$markwon_version"
    implementation "io.noties.markwon:recycler:$markwon_version"
    implementation "io.noties.markwon:recycler-table:$markwon_version"
    implementation "io.noties.markwon:simple-ext:$markwon_version"
    implementation 'org.codeberg.qwerty287:markwonprism4j:9d3ef078cd'
    implementation 'org.codeberg.qwerty287:Prism4j:3.0.0'
    implementation 'com.google.guava:guava:31.1-android'
    implementation "io.noties.markwon:image-picasso:$markwon_version"
    implementation "com.github.HamidrezaAmz:BreadcrumbsView:0.2.9"
    //noinspection GradleDependency
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation "com.github.chrisbanes:PhotoView:2.3.0"
    implementation "ch.acra:acra-mail:$acra"
    implementation "ch.acra:acra-limiter:$acra"
    implementation "ch.acra:acra-notification:$acra"
    implementation 'androidx.room:room-runtime:2.4.3'
    annotationProcessor 'androidx.room:room-compiler:2.4.3'
    implementation "androidx.work:work-runtime:$work_version"
    implementation "io.mikael:urlbuilder:2.0.9"
    implementation "org.codeberg.gitnex-garage:emoji-java:v5.1.2"
    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
    implementation 'androidx.biometric:biometric:1.1.0'
    implementation 'com.github.chrisvest:stormpot:2.4.2'
    implementation 'androidx.browser:browser:1.4.0'
    implementation 'com.google.android.flexbox:flexbox:3.0.0'
    implementation('org.codeberg.gitnex:tea4j-autodeploy:3111bc1b18') {
        exclude module: 'org.apache.oltu.oauth2.common'
    }
    implementation 'io.github.amrdeveloper:codeview:1.3.5'
}
